--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 
 :root {
-  --yellow: #fcd755;
+  /* Colors */
+  --yellow: #f0ce0d;
+
+  --bbg: #111;
 
   --shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
     rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
@@ -39,7 +42,7 @@ html::-webkit-scrollbar-thumb {
   background: var(--yellow);
 }
 body {
-  background: #111;
+  background: var(--bbg);
   overflow-x: hidden;
   padding-left: 35rem;
 }
@@ -66,7 +69,7 @@ section {
 
 .btn:hover {
   background: var(--yellow);
-  color: #111;
+  color: var(--bbg);
 }
 
 .heading {
@@ -276,7 +279,7 @@ header .navbar ul li a:hover {
   font-size: 2rem;
   color: #fff;
   background: var(--yellow);
-  color: #111;
+  color: var(--bbg);
 }
 
 .portfolio .box-container {
